# bayespam-classifier

./: .gitignore  Makefile  README.md  classifier_test.py  classifier_train.py  classifier_training.py  pyproject.toml
