[tool.poetry]
name = "bayesspam-classifier"
version = "2023.5.23"
description = "A simple naive bayes spam/ham classifier using sklearn and pandas"
authors = ["Divanshu Chauhan <divkix@divkix.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.0"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^2.17.4"
pre-commit = "^3.3.2"
isort = "^5.12.0"
pyclean = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
